Uploading fix for missing background style

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("./images/pattern-background-desktop.svg");
+    background-image: url("https://raw.githubusercontent.com/Airwolf435/OrderSummaryChallenge/a46d3333a48867d4958fa957e0eeefea568e7a0c/images/pattern-background-desktop.svg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-color: hsl(225, 100%, 94%);
